# seniorcoder

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
logger/: CMakeLists.txt
logger/src/: sclogger.cpp  sclogger.h
logger/test/: sclogger.test.cpp
